--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
+  intl: ^0.18.1
+  http: ^1.1.0
+  google_fonts: ^6.1.0
+  flutter_rating_bar: ^4.0.1
+  carousel_slider: ^4.2.1
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
