--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   carousel_slider: ^4.2.1
   flutter_bloc: ^8.1.3
+  youtube_player_iframe: ^4.0.4
 
 dev_dependencies:
   flutter_test:
