imp. add getIt to support DI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   logger: ^2.4.0
   json_annotation: ^4.9.0
   flutter_dotenv: ^5.2.1
+  get_it: ^8.0.1
 
 dev_dependencies:
   flutter_test:
